Bug 156553 - Accessibility sidebar not updated after image deletion
Summary: Accessibility sidebar not updated after image deletion
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:24.2.0 target:7.6.1
Keywords:
Depends on:
Blocks: Accessibility-Check
  Show dependency treegraph
 
Reported: 2023-07-31 13:55 UTC by Gabor Kelemen (Collabora)
Modified: 2023-08-10 09:17 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Writer with image (60.44 KB, application/vnd.oasis.opendocument.text)
2023-07-31 13:55 UTC, Gabor Kelemen (Collabora)
Details
Warning about missing alt text (169.07 KB, image/png)
2023-07-31 14:01 UTC, Gabor Kelemen (Collabora)
Details
Image removed, warning is still there (134.54 KB, image/png)
2023-07-31 14:01 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-07-31 13:55:52 UTC
Created attachment 188675 [details]
Example file from Writer with image

Attached simple example file contains an image, where the accessible description is missing.
When the image is deleted, the accessibility sidebar keeps showing the "Missing alternative or description text" warning and the Fix button.

1. Open attached file
2. Open the accessibility check sidebar
3. Click on the image and press Delete, try to click into another paragraph or to type
4. The accessibility check still warns about the missing description of the image.
-> Click Fix, then click Cancel or Ok -> Crash.

The accessibility sidebar should update after the image is deleted. Currently I can make it disappear only by creating another accessibility issue, like hitting Enter at the end to get the "Avoid newlines to create space" warning.

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d4653fa961b1aa1cd4bf568e7d1fe50ae97df484
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: hu-HU
Calc: threaded
Comment 1 Gabor Kelemen (Collabora) 2023-07-31 14:01:23 UTC
Created attachment 188676 [details]
Warning about missing alt text
Comment 2 Gabor Kelemen (Collabora) 2023-07-31 14:01:42 UTC
Created attachment 188677 [details]
Image removed, warning is still there
Comment 3 Commit Notification 2023-08-10 07:55:56 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0d2fc6c053cad80c685755d030c6b57202f78d50

tdf#156553 tdf#156554 A11Y: fix issue update after image deletion

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-08-10 08:57:11 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/6980f69c559861aba7279d5b90ae09f0347fa4d4

tdf#156553 tdf#156554 A11Y: fix issue update after image deletion

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.