tdf#156553 tdf#156554 A11Y: fix issue update after image deletion

Reset accessibility check issues when deleting graphic/ole nodes.

Change-Id: I5f0698f6cf9e97045be22482de64518ab22d5946
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155355
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>
(cherry picked from commit 0d2fc6c053cad80c685755d030c6b57202f78d50)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155482
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>